--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
