--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
