--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
