--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.9",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
     "next": "16.0.3",
@@ -19,9 +21,13 @@
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
+    "sonner": "^2.0.7",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
