--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.7",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
