--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.9",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
