--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
@@ -39,7 +39,7 @@
     "autoprefixer": "^10.4.19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.0.8",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
